loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue602_comprehension_copy_hotpaths.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn squares(xs: Vec<i64>) -> Vec<i64> {
    return ((xs).into_iter()).map(|x| x * x).collect::<Vec<_>>();
}
fn positive_squares(xs: Vec<i64>) -> Vec<i64> {
    return ((xs).into_iter())
        .filter_map(|x| { if x > 0 { Some(x * x) } else { None } })
        .collect::<Vec<_>>();
}
fn index_by_value(xs: Vec<i64>) -> std::collections::HashMap<i64, i64> {
    return ((xs).into_iter())
        .filter_map(|x| { if x > 0 { Some((x, x * x)) } else { None } })
        .collect::<std::collections::HashMap<_, _>>();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let values = vec![1, 2, 3];
    let copied = squares(values.clone());
    let filtered = positive_squares(values.clone());
    let indexed = index_by_value(values);
    let _ = println!(
        "{}", * incan_std_core::collections::list_get(& copied, (0) as i64)
    );
    let _ = println!(
        "{}", * incan_std_core::collections::list_get(& filtered, (0) as i64)
    );
    let _ = println!("{}", * incan_std_core::collections::dict_get(& indexed, & 1));
}
