loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue731_generic_method_defaults.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Box<T: Clone> {
    value: T,
}
impl<T: Clone> incan_std_core::reflection::HasClassName for Box<T> {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl<T: Clone> incan_std_core::reflection::HasTypeClassName for Box<T> {
    fn __class_name__() -> &'static str {
        "Box"
    }
}
impl<T: Clone> incan_std_core::reflection::HasFieldMetadata for Box<T> {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl<T: Clone> incan_std_core::reflection::HasTypeFieldMetadata for Box<T> {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 0] = [];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl<T: Clone> incan_std_core::reflection::HasFieldValueReflection for Box<T> {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl<T: Clone> Box<T> {
    pub fn join(&self, other: Box<T>, _: String) -> Box<T> {
        return other;
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Shelf<T> {
    #[expect(dead_code, reason = "retained for Incan private field semantics")]
    item: T,
}
impl<T> incan_std_core::reflection::HasClassName for Shelf<T> {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl<T> incan_std_core::reflection::HasTypeClassName for Shelf<T> {
    fn __class_name__() -> &'static str {
        "Shelf"
    }
}
impl<T> incan_std_core::reflection::HasFieldMetadata for Shelf<T> {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl<T> incan_std_core::reflection::HasTypeFieldMetadata for Shelf<T> {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("item"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("item"),
                type_name: incan_std_core::frozen::FrozenStr::new("T"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl<T: Clone> Shelf<T> {
    pub fn relabel(&self, _: String) -> Shelf<T> {
        return self.clone();
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let left = Box { value: 1 };
    let right = Box { value: 2 };
    let _joined: Box<i64> = left.join(right.clone(), "".to_string());
    let _joined_named: Box<i64> = left.join(right, "".to_string());
    let shelf: Shelf<i64> = Shelf { item: 1 };
    let _relabeled: Shelf<i64> = shelf.relabel("".to_string());
}
