loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue950_953_iterator_adapter_sources.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn score_pairs(left: Vec<f64>, right: Vec<f64>) -> f64 {
    let _ = "Compute a dot product through the fluent iterator zip adapter.";
    let mut score = 0.0;
    for pair in {
        let mut __incan_iter = crate::__incan_std::derives::collection::ZipIterator {
            left: (crate::__incan_std::derives::collection::ListIterator {
                items: (left),
                index: 0i64,
            }),
            right: (crate::__incan_std::derives::collection::ListIterator {
                items: (right),
                index: 0i64,
            }),
            left_marker: None,
            right_marker: None,
        };
        std::iter::from_fn(move || crate::__incan_std::derives::collection::Iterator::__next__(
            &mut __incan_iter,
        ))
    } {
        score = score + pair.0 * pair.1;
    }
    return score;
}
fn score_pairs_builtin(left: Vec<f64>, right: Vec<f64>) -> f64 {
    let _ = "Compute a dot product through the direct builtin zip spelling.";
    let mut score = 0.0;
    for pair in {
        let mut __incan_iter = crate::__incan_std::derives::collection::ZipIterator {
            left: (crate::__incan_std::derives::collection::ListIterator {
                items: (left),
                index: 0i64,
            }),
            right: (crate::__incan_std::derives::collection::ListIterator {
                items: (right),
                index: 0i64,
            }),
            left_marker: None,
            right_marker: None,
        };
        std::iter::from_fn(move || crate::__incan_std::derives::collection::Iterator::__next__(
            &mut __incan_iter,
        ))
    } {
        score = score + pair.0 * pair.1;
    }
    return score;
}
fn score_iterator_pairs<
    __IncanTrait0: crate::__incan_std::derives::collection::Iterator<f64>,
    __IncanTrait1: crate::__incan_std::derives::collection::Iterator<f64>,
>(left: __IncanTrait0, right: __IncanTrait1) -> f64 {
    let _ = "Pair canonical iterator values through the direct builtin zip spelling.";
    let mut score = 0.0;
    for pair in {
        let mut __incan_iter = crate::__incan_std::derives::collection::ZipIterator {
            left: ((left)),
            right: ((right)),
            left_marker: None,
            right_marker: None,
        };
        std::iter::from_fn(move || crate::__incan_std::derives::collection::Iterator::__next__(
            &mut __incan_iter,
        ))
    } {
        score = score + pair.0 * pair.1;
    }
    return score;
}
fn print_prefix(values: Vec<String>) {
    let _ = "Print the first two values with their iterator-generated ranks.";
    let mut rank = 0;
    for value in {
        let mut __incan_iter = crate::__incan_std::derives::collection::TakeIterator {
            source: (crate::__incan_std::derives::collection::ListIterator {
                items: (values),
                index: 0i64,
            }),
            remaining: 2i64,
            marker: None,
        };
        std::iter::from_fn(move || crate::__incan_std::derives::collection::Iterator::__next__(
            &mut __incan_iter,
        ))
    } {
        let _ = println!(
            "{}", { let __parts : [& str; 3usize] = ["", ":", ""]; let __args : Vec <
            String > = vec![format!("{}", rank), format!("{}", value)];
            incan_std_core::strings::fstring(& __parts, & __args) }
        );
        rank = rank + 1;
    }
}
fn project_prefix(values: Vec<String>) -> Vec<String> {
    let _ = "Project the first two ranked values through a list comprehension.";
    return ({
        let mut __incan_iter = crate::__incan_std::derives::collection::EnumerateIterator {
            source: (crate::__incan_std::derives::collection::TakeIterator {
                source: (crate::__incan_std::derives::collection::ListIterator {
                    items: (values),
                    index: 0i64,
                }),
                remaining: 2i64,
                marker: None,
            }),
            index: 0i64,
            marker: None,
        };
        std::iter::from_fn(move || crate::__incan_std::derives::collection::Iterator::__next__(
            &mut __incan_iter,
        ))
    })
        .map(|(rank, value)| {
            let __parts: [&str; 3usize] = ["", ":", ""];
            let __args: Vec<String> = vec![format!("{}", rank), format!("{}", value)];
            incan_std_core::strings::fstring(&__parts, &__args)
        })
        .collect::<Vec<_>>();
}
fn index_prefix(values: Vec<String>) -> std::collections::HashMap<i64, String> {
    let _ = "Index the first two values through a dictionary comprehension.";
    return ({
        let mut __incan_iter = crate::__incan_std::derives::collection::EnumerateIterator {
            source: (crate::__incan_std::derives::collection::TakeIterator {
                source: (crate::__incan_std::derives::collection::ListIterator {
                    items: (values),
                    index: 0i64,
                }),
                remaining: 2i64,
                marker: None,
            }),
            index: 0i64,
            marker: None,
        };
        std::iter::from_fn(move || crate::__incan_std::derives::collection::Iterator::__next__(
            &mut __incan_iter,
        ))
    })
        .map(|(rank, value)| (rank, value))
        .collect::<std::collections::HashMap<_, _>>();
}
fn collect_prefix(values: Vec<String>) -> Vec<String> {
    let _ = "Collect a generator that reads from a source-owned iterator adapter.";
    return incan_std_core::iter::Generator::new(
            ({
                let mut __incan_iter = crate::__incan_std::derives::collection::TakeIterator {
                    source: (crate::__incan_std::derives::collection::ListIterator {
                        items: (values).clone(),
                        index: 0i64,
                    }),
                    remaining: 2i64,
                    marker: None,
                };
                std::iter::from_fn(move || crate::__incan_std::derives::collection::Iterator::__next__(
                    &mut __incan_iter,
                ))
            })
                .flat_map(move |value| {
                    incan_std_core::iter::Generator::new(std::iter::once(value))
                }),
        )
        .collect();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = "Exercise iterator adapters as direct loop and comprehension sources.";
    let left = vec![1.0, 2.0];
    let right = vec![3.0, 4.0];
    let values = vec!["beta".to_string(), "alpha".to_string(), "beta".to_string()];
    let _ = println!("{}", score_pairs(left.clone(), right.clone()));
    let _ = println!("{}", score_pairs_builtin(left.clone(), right.clone()));
    let _ = println!(
        "{}", score_iterator_pairs(crate ::__incan_std::derives::collection::ListIterator
        { items : (left), index : 0i64 }, crate
        ::__incan_std::derives::collection::ListIterator { items : (right), index : 0i64
        })
    );
    let _ = print_prefix(values.clone());
    let _ = println!(
        "{}", ::std::convert::identity(project_prefix(values.clone()).len() as i64)
    );
    let _ = println!(
        "{}", incan_std_core::collections::dict_get(& index_prefix(values.clone()), & 1)
        .clone()
    );
    let _ = println!(
        "{}", ::std::convert::identity(collect_prefix(values).len() as i64)
    );
}
