loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue951_set_constructor.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
const FROZEN_LIST_VALUES: incan_std_core::frozen::FrozenList<&'static str> = incan_std_core::frozen::FrozenList::new(
    &["beta", "alpha", "beta"],
);
const FROZEN_SET_VALUES: incan_std_core::frozen::FrozenSet<&'static str> = incan_std_core::frozen::FrozenSet::new(
    &["beta", "alpha", "beta"],
);
fn unique_ids(values: Vec<String>) -> std::collections::HashSet<String> {
    let _ = "Build a set through the Python-style lowercase spelling.";
    return (values).into_iter().collect::<std::collections::HashSet<_>>();
}
fn canonical_unique_ids(values: Vec<String>) -> std::collections::HashSet<String> {
    let _ = "Build the same set through the canonical collection type spelling.";
    return (values).into_iter().collect::<std::collections::HashSet<_>>();
}
fn unique_without_consuming_source(
    values: Vec<String>,
) -> std::collections::HashSet<String> {
    let _ = "Preserve a mutable list when code reads it again after construction.";
    let result = (values.clone()).into_iter().collect::<std::collections::HashSet<_>>();
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["source:", ""]; let __args : Vec <
        String > = vec![format!("{}", ::std::convert::identity(values.len() as i64))];
        incan_std_core::strings::fstring(& __parts, & __args) }
    );
    return result;
}
fn generic_unique_without_consuming_source<T: Eq + std::hash::Hash + Clone>(
    values: Vec<T>,
) -> std::collections::HashSet<T> {
    let _ = "Infer collection and ownership bounds for a reused generic list.";
    let result = (values.clone()).into_iter().collect::<std::collections::HashSet<_>>();
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["generic-source:", ""]; let __args : Vec
        < String > = vec![format!("{}", ::std::convert::identity(values.len() as i64))];
        incan_std_core::strings::fstring(& __parts, & __args) }
    );
    return result;
}
fn unique_set_without_consuming_source(
    values: std::collections::HashSet<String>,
) -> std::collections::HashSet<String> {
    let _ = "Preserve a mutable set when code reads it again after construction.";
    let result = (values.clone()).into_iter().collect::<std::collections::HashSet<_>>();
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["set-source:", ""]; let __args : Vec <
        String > = vec![format!("{}", ::std::convert::identity(values.len() as i64))];
        incan_std_core::strings::fstring(& __parts, & __args) }
    );
    return result;
}
fn unique_frozen_list<T: Eq + std::hash::Hash + Clone>(
    values: incan_std_core::frozen::FrozenList<T>,
) -> std::collections::HashSet<T> {
    let _ = "Clone borrowed values while converting an immutable list into a set.";
    return (values).iter().cloned().collect::<std::collections::HashSet<_>>();
}
fn unique_frozen_set<T: Eq + std::hash::Hash + Clone>(
    values: incan_std_core::frozen::FrozenSet<T>,
) -> std::collections::HashSet<T> {
    let _ = "Clone borrowed values while converting an immutable set into a mutable set.";
    return (values).iter().cloned().collect::<std::collections::HashSet<_>>();
}
fn unique_optional_values<T: Eq + std::hash::Hash>(
    values: Vec<Option<T>>,
) -> std::collections::HashSet<Option<T>> {
    let _ = "Infer hash and equality bounds through a nested optional element type.";
    return (values).into_iter().collect::<std::collections::HashSet<_>>();
}
fn unique_vec<T: Eq + std::hash::Hash>(values: Vec<T>) -> std::collections::HashSet<T> {
    let _ = "Preserve generic bounds for the accepted Rust-compatible Vec spelling.";
    return (values).into_iter().collect::<std::collections::HashSet<_>>();
}
fn empty_ids() -> std::collections::HashSet<String> {
    let _ = "Construct an empty set whose element type comes from the return contract.";
    return std::collections::HashSet::new();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = "Run the constructor matrix and print deterministic cardinalities.";
    let values = vec!["beta".to_string(), "alpha".to_string(), "beta".to_string()];
    let lowercase = unique_ids(values.clone());
    let canonical = canonical_unique_ids(values.clone());
    let retained = unique_without_consuming_source(values.clone());
    let generic = generic_unique_without_consuming_source(values);
    let set_values = ["beta".to_string(), "alpha".to_string(), "beta".to_string()]
        .into_iter()
        .collect::<std::collections::HashSet<_>>();
    let retained_set = unique_set_without_consuming_source(set_values);
    let frozen_list = unique_frozen_list(FROZEN_LIST_VALUES);
    let frozen_set = unique_frozen_set(FROZEN_SET_VALUES);
    let optional = unique_optional_values(
        vec![Some("alpha".to_string()), Some("alpha".to_string())],
    );
    let vec_values = unique_vec(
        vec!["delta".to_string(), "delta".to_string(), "gamma".to_string()],
    );
    let empty = empty_ids();
    let summary = incan_std_core::strings::str_concat(
        &{
            let __parts: [&str; 6usize] = ["", ":", ":", ":", ":", ":"];
            let __args: Vec<String> = vec![
                format!("{}", ::std::convert::identity(lowercase.len() as i64)),
                format!("{}", ::std::convert::identity(canonical.len() as i64)),
                format!("{}", ::std::convert::identity(retained.len() as i64)),
                format!("{}", ::std::convert::identity(generic.len() as i64)),
                format!("{}", ::std::convert::identity(retained_set.len() as i64))
            ];
            incan_std_core::strings::fstring(&__parts, &__args)
        },
        &{
            let __parts: [&str; 6usize] = ["", ":", ":", ":", ":", ""];
            let __args: Vec<String> = vec![
                format!("{}", ::std::convert::identity(frozen_list.len() as i64)),
                format!("{}", ::std::convert::identity(frozen_set.len() as i64)),
                format!("{}", ::std::convert::identity(optional.len() as i64)),
                format!("{}", ::std::convert::identity(vec_values.len() as i64)),
                format!("{}", ::std::convert::identity(empty.len() as i64))
            ];
            incan_std_core::strings::fstring(&__parts, &__args)
        },
    );
    let _ = println!("{}", summary);
}
